# MinimalistMP3Player

./: .SRCINFO  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PKGBUILD  README.md
.github/workflows/: ci.yml  release.yml
build-release/: install_manifest.txt
scripts/: build-ftxui.sh  test.sh
src/: main.cpp
src/audio/: IAudioSink.h  SdlAudioSink.cpp  SdlAudioSink.h  SdlAudioSubsystem.cpp  SdlAudioSubsystem.h
src/commands/: CommandQueue.cpp  CommandQueue.h
src/config/: Config.h
src/decode/: BpmDetector.cpp  BpmDetector.h  Fft.cpp  Fft.h  IAudioDecoder.h  Mp3Decoder.cpp  Mp3Decoder.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h
src/events/: NotificationBus.h  PlaybackEvent.h  PlaybackEventPublisher.cpp  PlaybackEventPublisher.h
src/player/: AlbumPlayer.cpp  AlbumPlayer.h  AutoAdvanceManager.cpp  AutoAdvanceManager.h  DecodeThread.cpp  DecodeThread.h  PlaybackController.cpp  PlaybackController.h  PlaybackEngine.cpp  PlaybackEngine.h  SongQueue.cpp  SongQueue.h
src/service/: AsyncLibraryService.cpp  AsyncLibraryService.h  ConfigService.cpp  ConfigService.h  IConfigService.h  ILibraryQuery.h  ILibraryService.h  IPlaybackControl.h  IVisualizationSource.h  LibraryService.cpp  LibraryService.h
src/tui/: FileManager.cpp  FileManager.h  Palette.h  PlayingBar.cpp  PlayingBar.h  ScreenRefreshTimer.cpp  ScreenRefreshTimer.h  UserInputs.cpp  UserInputs.h  Visuals.cpp  Visuals.h  VisualsBase.cpp  VisualsBase.h  VisualsCircular.cpp  VisualsMirrored.cpp  VisualsPanel.cpp  VisualsRolling.cpp  ui.cpp  ui.h
src/util/: AudioFormat.h  DirectoryWatcher.cpp  DirectoryWatcher.h  PathValidator.cpp  PathValidator.h  RingBuffer.h
tests/: tests.md
tests/bench/: BpmDetectorBench.cpp  CommandQueueBench.cpp  RingBufferBench.cpp  SpectrumBench.cpp
tests/fuzz/: FuzzMp3.cpp
tests/integration/: Mp3DecoderTest.cpp
tests/stress/: RingBufferStressTest.cpp
tests/unit/: BpmDetectorTest.cpp  ConfigServiceTest.cpp  DecodeThreadTest.cpp  FftTest.cpp  Mp3DecoderRaiiTest.cpp  PathValidatorTest.cpp  RingBufferTest.cpp  SdlAudioSinkTest.cpp  SpectrumAnalyzerTest.cpp  ThreadLifecycleTest.cpp
